--- a/presentation/src/main/res/drawable/v_vertical_line.xml
+++ b/presentation/src/main/res/drawable/v_vertical_line.xml
@@ -1,11 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1dp"
-    android:height="5dp"
-    android:viewportWidth="0.5"
-    android:viewportHeight="1">
-  <path
-      android:strokeWidth="1"
-      android:pathData="M0.5,0L0.5,12"
-      android:fillColor="#00000000"
-      android:strokeColor="#999999"/>
-</vector>
+<?xml version="1.0" encoding="utf-8" ?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/input_information_gray"/>
+            <size android:width="1dp" />
+            <size android:height="13dp"/>
+        </shape>
+    </item>
+</layer-list>
