--- a/presentation/src/main/res/layout/activity_loginpage.xml
+++ b/presentation/src/main/res/layout/activity_loginpage.xml
@@ -5,6 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_vertical_line_s"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.684" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_vertical_line_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.689" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_vertical_line_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.503" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_vertical_line_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        app:layout_constraintGuide_percent="0.927" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_sign_up_s"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.56" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_sign_up_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.667" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_sign_up_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_sign_up_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.525" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_login_logo_t"
         android:layout_width="match_parent"
@@ -95,176 +151,211 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.817"
-        />
+        app:layout_constraintGuide_percent="0.817" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_social_login_logo_b"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.868"/>
+        app:layout_constraintGuide_percent="0.868" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_google_social_login_s"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.287"/>
+        app:layout_constraintGuide_percent="0.287" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_google_social_login_e"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.376"/>
+        app:layout_constraintGuide_percent="0.376" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_github_social_login_s"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.457"
-        />
+        app:layout_constraintGuide_percent="0.457" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_github_social_login_e"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.547"/>
+        app:layout_constraintGuide_percent="0.547" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_kakao_social_login_s"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.624"
-        />
+        app:layout_constraintGuide_percent="0.624" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_kakao_social_login_e"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.712"
-        />
+        app:layout_constraintGuide_percent="0.712" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_find_password_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_find_password_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.525" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_find_password_s"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.707" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_find_password_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.87" />
+
     <TextView
         android:id="@+id/tv_login_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="143dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:fontFamily="@font/pretendard_bold"
         android:text="@string/login_logo"
         android:textColor="@color/primary"
         android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/g_login_log_b"
+        app:layout_constraintEnd_toEndOf="@id/g_login_logo_e"
+        app:layout_constraintStart_toStartOf="@id/g_login_log_s"
+        app:layout_constraintTop_toTopOf="@id/g_login_logo_t" />
 
     <EditText
         android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="28dp"
-        android:layout_marginTop="243dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/bg_edittext"
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/typing_email"
         android:paddingStart="16dp"
         android:textColorHint="@color/input_information_gray"
         android:textSize="14dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
+        app:layout_constraintEnd_toEndOf="@+id/g_input_information_e"
+        app:layout_constraintStart_toStartOf="@+id/g_input_information_s"
+        app:layout_constraintTop_toTopOf="@id/g_input_email_t" />
 
     <EditText
         android:id="@+id/et_passowrd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/bg_edittext"
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/typing_password"
         android:paddingStart="16dp"
         android:textColorHint="@color/input_information_gray"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_email" />
+        app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
+        app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
+        app:layout_constraintStart_toStartOf="@id/g_input_information_s"
+        app:layout_constraintTop_toTopOf="@id/g_input_password_t" />
 
 
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="28dp"
-        android:layout_marginTop="407dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/btn_login"
         android:text="로그인"
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/g_login_button_b"
+        app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
+        app:layout_constraintStart_toStartOf="@id/g_input_information_s"
+        app:layout_constraintTop_toTopOf="@id/g_login_button_t" />
 
 
     <TextView
         android:id="@+id/tv_find_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="291dp"
-        android:layout_marginTop="366dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:fontFamily="@font/pretendard_regular"
         android:text="@string/find_password"
         android:textColor="@color/input_information_gray"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_find_password_b"
+        app:layout_constraintEnd_toEndOf="@id/g_find_password_e"
+        app:layout_constraintStart_toStartOf="@id/g_find_password_s"
+        app:layout_constraintTop_toTopOf="@id/g_find_password_t" />
+
 
     <ImageButton
         android:id="@+id/ibtn_google_lg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="113dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/lg_google"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ibtn_kakao_lg"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/g_social_login_logo_b"
+        app:layout_constraintEnd_toEndOf="@+id/g_google_social_login_e"
+        app:layout_constraintStart_toStartOf="@id/g_google_social_login_s"
+        app:layout_constraintTop_toTopOf="@+id/g_social_login_logo_t" />
 
     <ImageButton
         android:id="@+id/ibtn_kakao_lg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/lg_kakaotalk"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ibtn_github_lg"
-        app:layout_constraintStart_toEndOf="@id/ibtn_google_lg" />
+        app:layout_constraintBottom_toBottomOf="@id/g_social_login_logo_b"
+        app:layout_constraintEnd_toEndOf="@id/g_kakao_social_login_e"
+        app:layout_constraintStart_toStartOf="@id/g_kakao_social_login_s"
+        app:layout_constraintTop_toTopOf="@+id/g_social_login_logo_t"
+
+        />
 
     <ImageButton
         android:id="@+id/ibtn_github_lg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="113dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/lg_github"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ibtn_kakao_lg" />
-
+        app:layout_constraintBottom_toBottomOf="@id/g_social_login_logo_b"
+        app:layout_constraintEnd_toEndOf="@id/g_github_social_login_e"
+        app:layout_constraintStart_toStartOf="@id/g_github_social_login_s"
+        app:layout_constraintTop_toTopOf="@id/g_social_login_logo_t" />
 
     <TextView
         android:id="@+id/tv_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="230dp"
-        android:layout_marginTop="366dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:fontFamily="@font/pretendard_regular"
         android:text="@string/sign_up"
         android:textColor="@color/input_information_gray"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/g_sign_up_b"
+        app:layout_constraintEnd_toEndOf="@id/g_sign_up_e"
+        app:layout_constraintStart_toStartOf="@+id/g_sign_up_s"
+        app:layout_constraintTop_toTopOf="@+id/g_sign_up_t" />
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="13dp"
+        android:background="@drawable/v_vertical_line"
+        app:layout_constraintBottom_toBottomOf="@id/g_vertical_line_b"
+        app:layout_constraintStart_toStartOf="@id/g_vertical_line_s"
+        app:layout_constraintTop_toTopOf="@id/g_vertical_line_t"
+        app:layout_constraintEnd_toEndOf="@id/g_vertical_line_e"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
