--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -140,35 +140,33 @@
         app:layout_constraintGuide_percent="0.855" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
         android:id="@+id/g_check_btn_t"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.86"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.86" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_check_btn_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.932"
-        />
+        app:layout_constraintGuide_percent="0.932" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
         android:id="@+id/g_check_btn_s"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.094"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:id="@+id/g_check_btn_e"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.906"/>
+        app:layout_constraintGuide_percent="0.094" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_check_btn_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.906" />
+
     <ImageButton
         android:id="@+id/ibtn_back_button"
         android:layout_width="0dp"
@@ -210,6 +208,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/bg_input_auth_code_edit_text"
+        android:maxLength="1"
+        android:nextFocusDown="@id/et_input_auth_code_2"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_1_e"
         app:layout_constraintStart_toStartOf="@id/g_text_s"
@@ -220,33 +220,35 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/bg_input_auth_code_edit_text"
-        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_2_s"
-        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
+        android:maxLength="1"
+        android:nextFocusDown="@id/et_input_auth_code_3"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_2_e"
-        />
+        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_2_s"
+        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t" />
 
     <TextView
         android:id="@+id/et_input_auth_code_3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/bg_input_auth_code_edit_text"
-        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_3_s"
-        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
+        android:maxLength="1"
+        android:nextFocusDown="@id/et_input_auth_code_4"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_3_e"
-        />
+        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_3_s"
+        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t" />
 
     <TextView
         android:id="@+id/et_input_auth_code_4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/bg_input_auth_code_edit_text"
-        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_4_s"
-        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
+        android:maxLength="1"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_4_e"
-        />
+        app:layout_constraintStart_toStartOf="@id/g_input_auth_code_4_s"
+        app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t" />
 
     <Button
         android:id="@+id/btn_check"
@@ -260,8 +262,7 @@
         app:layout_constraintBottom_toBottomOf="@id/g_check_btn_b"
         app:layout_constraintEnd_toEndOf="@id/g_check_btn_e"
         app:layout_constraintStart_toStartOf="@id/g_check_btn_s"
-        app:layout_constraintTop_toTopOf="@id/g_check_btn_t"
-        />
+        app:layout_constraintTop_toTopOf="@id/g_check_btn_t" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
