--- a/presentation/src/main/res/layout/activity_login_page.xml
+++ b/presentation/src/main/res/layout/activity_login_page.xml
@@ -293,6 +293,7 @@
         android:background="@drawable/bg_edittext"
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/typing_password"
+        android:inputType="textPassword"
         android:paddingStart="16dp"
         android:textColorHint="@color/input_information_gray"
         android:textSize="14sp"
