--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -212,6 +212,8 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textSize="32sp"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_1_e"
@@ -225,6 +227,8 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textSize="32sp"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
         app:layout_constraintStart_toStartOf="@id/g_input_auth_code_2_s"
         app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
@@ -239,6 +243,8 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textSize="32sp"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
         app:layout_constraintStart_toStartOf="@id/g_input_auth_code_3_s"
         app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
@@ -253,6 +259,8 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textSize="32sp"
+        android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
         app:layout_constraintStart_toStartOf="@id/g_input_auth_code_4_s"
         app:layout_constraintTop_toTopOf="@id/g_input_auth_code_t"
