인증번호 입력 페이지 EditText textColor 적용

--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -213,6 +213,7 @@
         android:inputType="number"
         android:cursorVisible="false"
         android:textSize="32sp"
+        android:textColor="@color/first_time_in_ia"
         android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
         app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
@@ -227,6 +228,7 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textColor="@color/first_time_in_ia"
         android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
@@ -243,6 +245,7 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textColor="@color/first_time_in_ia"
         android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
@@ -259,6 +262,7 @@
         android:digits="1"
         android:inputType="number"
         android:cursorVisible="false"
+        android:textColor="@color/first_time_in_ia"
         android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:background="@drawable/bg_input_auth_code_edit_text"
