textColor 추가, signUp page guide line이 적용 되지 않은 뷰들 발견

--- a/presentation/src/main/res/layout/activity_login_page.xml
+++ b/presentation/src/main/res/layout/activity_login_page.xml
@@ -279,6 +279,7 @@
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/typing_email"
         android:paddingStart="16dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/input_information_gray"
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
@@ -294,6 +295,7 @@
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/typing_password"
         android:paddingStart="16dp"
+        android:textColor="@color/black"
         android:textColorHint="@color/input_information_gray"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
