--- a/presentation/src/main/res/layout/activity_authentication_success_page.xml
+++ b/presentation/src/main/res/layout/activity_authentication_success_page.xml
@@ -139,8 +139,7 @@
         app:layout_constraintBottom_toBottomOf="@id/g_go_back_to_login_page_btn_b"
         app:layout_constraintEnd_toEndOf="@id/g_go_back_to_login_page_btn_e"
         app:layout_constraintStart_toStartOf="@id/g_go_back_to_login_page_btn_s"
-        app:layout_constraintTop_toTopOf="@id/g_go_back_to_login_page_btn_t"
-        />
+        app:layout_constraintTop_toTopOf="@id/g_go_back_to_login_page_btn_t" />
 
     <TextView
         android:id="@+id/tv_authentication_success"
