비밀번호 찾기 페이지 퍼블리싱

--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -211,6 +211,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:digits="1"
+        android:nextFocusDown="@id/et_input_auth_code_2"
         android:inputType="number"
         android:cursorVisible="false"
         android:textSize="32sp"
@@ -228,6 +229,7 @@
         android:layout_height="0dp"
         android:digits="1"
         android:inputType="number"
+        android:nextFocusDown="@id/et_input_auth_code_3"
         android:cursorVisible="false"
         android:textColor="@color/first_time_in_ia"
         android:textSize="32sp"
@@ -245,6 +247,7 @@
         android:layout_height="0dp"
         android:digits="1"
         android:inputType="number"
+        android:nextFocusDown="@id/et_input_auth_code_4"
         android:cursorVisible="false"
         android:textColor="@color/first_time_in_ia"
         android:textSize="32sp"
