인증번호 입력 페이지의 editText에 nextFocusDown 추가

--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -209,6 +209,7 @@
         android:layout_height="0dp"
         android:background="@drawable/bg_input_auth_code_edit_text"
         android:cursorVisible="false"
+        android:nextFocusDown="@id/et_input_auth_code_2"
         android:digits="1"
         android:inputType="number"
         android:textColor="@color/first_time_in_ia"
@@ -225,6 +226,7 @@
         android:background="@drawable/bg_input_auth_code_edit_text"
         android:cursorVisible="false"
         android:digits="1"
+        android:nextFocusDown="@id/et_input_auth_code_3"
         android:fontFamily="@font/pretendard_semibold"
         android:inputType="number"
         android:textColor="@color/first_time_in_ia"
@@ -241,6 +243,7 @@
         android:background="@drawable/bg_input_auth_code_edit_text"
         android:cursorVisible="false"
         android:digits="1"
+        android:nextFocusDown="@id/et_input_auth_code_4"
         android:fontFamily="@font/pretendard_semibold"
         android:inputType="number"
         android:textColor="@color/first_time_in_ia"
