새 비밀번호 페이지 입력 퍼블리싱 전에비밀번호 찾기 페이지  코드 정리 한 것 커밋

--- a/presentation/src/main/res/layout/actiivty_find_password_page.xml
+++ b/presentation/src/main/res/layout/actiivty_find_password_page.xml
@@ -89,20 +89,18 @@
         app:layout_constraintGuide_percent="0.904" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_check_btn_t"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:id="@+id/g_check_btn_t"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.439"
-        />
+        app:layout_constraintGuide_percent="0.439" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_check_btn_b"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:id="@+id/g_check_btn_b"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.512"
-        />
+        app:layout_constraintGuide_percent="0.512" />
 
     <ImageButton
         android:id="@+id/ibtn_back_button"
@@ -137,11 +135,10 @@
         android:text="@string/typing_email"
         android:textColor="@color/input_information_gray"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_email_e"
         app:layout_constraintStart_toStartOf="@id/g_input_email_s"
-        app:layout_constraintTop_toTopOf="@id/g_input_email_t"
-        app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
-        />
+        app:layout_constraintTop_toTopOf="@id/g_input_email_t" />
 
     <Button
         android:id="@+id/btn_check"
@@ -152,9 +149,8 @@
         android:text="@string/check"
         android:textColor="@color/white"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_check_btn_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_email_e"
         app:layout_constraintStart_toStartOf="@id/g_input_email_s"
-        app:layout_constraintTop_toTopOf="@id/g_check_btn_t"
-        app:layout_constraintBottom_toBottomOf="@id/g_check_btn_b"
-        />
+        app:layout_constraintTop_toTopOf="@id/g_check_btn_t" />
 </androidx.constraintlayout.widget.ConstraintLayout>
