page 퍼블리싱 도중 다른 페이지의 코드 정렬/전 커밋의 푸시도중 컨플릭트가 나길래 다시 나는지 확인 용도

--- a/presentation/src/main/res/layout/activity_new_password_input_page.xml
+++ b/presentation/src/main/res/layout/activity_new_password_input_page.xml
@@ -32,10 +32,32 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.7590" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_tv_password_rule_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.18" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_tv_password_rule_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.20" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_tv_password_rule_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6154" />
+
     <TextView
         android:id="@+id/tv_input_new_password"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="22sp"
         android:fontFamily="@font/pretendard_semibold"
         android:text="@string/input_new_password"
         android:textColor="@color/black"
@@ -43,4 +65,18 @@
         app:layout_constraintEnd_toEndOf="@id/g_tv_input_new_password_e"
         app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
         app:layout_constraintTop_toTopOf="@id/g_tv_input_new_password_t" />
+
+    <TextView
+        android:id="@+id/tv_password_rule"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/pretendard_regular"
+        android:text="@string/password_rule"
+        android:textSize="12sp"
+        android:textColor="@color/input_information_gray"
+        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
+        app:layout_constraintTop_toTopOf="@id/g_tv_password_rule_t"
+        app:layout_constraintEnd_toEndOf="@id/g_tv_password_rule_e"
+        app:layout_constraintBottom_toBottomOf="@id/g_tv_password_rule_b"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
