--- a/presentation/src/main/res/layout/activity_new_password_input_page.xml
+++ b/presentation/src/main/res/layout/activity_new_password_input_page.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7590" />
+        app:layout_constraintGuide_percent="0.77" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_tv_password_rule_t"
@@ -53,14 +53,65 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.6154" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_et_input_new_password_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2287" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_et_input_new_password_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2891" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_et_input_new_password_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9282" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_et_input_new_password_again_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3045" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_et_input_new_password_again_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3661" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_btn_check_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8791"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:id="@+id/g_btn_check_b"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9408"
+        />
+
     <TextView
         android:id="@+id/tv_input_new_password"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="22sp"
         android:fontFamily="@font/pretendard_semibold"
         android:text="@string/input_new_password"
         android:textColor="@color/black"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/g_tv_input_new_password_b"
         app:layout_constraintEnd_toEndOf="@id/g_tv_input_new_password_e"
         app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
@@ -72,11 +123,40 @@
         android:layout_height="0dp"
         android:fontFamily="@font/pretendard_regular"
         android:text="@string/password_rule"
-        android:textSize="12sp"
         android:textColor="@color/input_information_gray"
-        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
-        app:layout_constraintTop_toTopOf="@id/g_tv_password_rule_t"
-        app:layout_constraintEnd_toEndOf="@id/g_tv_password_rule_e"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_tv_password_rule_b"
-        />
+        app:layout_constraintEnd_toEndOf="@id/g_tv_password_rule_e"
+        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
+        app:layout_constraintTop_toTopOf="@id/g_tv_password_rule_t" />
+
+    <EditText
+        android:id="@+id/et_input_new_password"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_edittext"
+        android:fontFamily="@font/pretendard_regular"
+        android:hint="@string/hint_input_new_password"
+        android:paddingStart="12dp"
+        android:textColorHint="@color/input_information_gray"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_et_input_new_password_b"
+        app:layout_constraintEnd_toEndOf="@id/g_et_input_new_password_e"
+        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
+        app:layout_constraintTop_toTopOf="@id/g_et_input_new_password_t" />
+
+    <EditText
+        android:id="@+id/et_input_password_again"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_edittext"
+        android:fontFamily="@font/pretendard_regular"
+        android:hint="@string/input_again"
+        android:paddingStart="12dp"
+        android:textColorHint="@color/input_information_gray"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_et_input_new_password_again_b"
+        app:layout_constraintEnd_toEndOf="@id/g_et_input_new_password_e"
+        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
+        app:layout_constraintTop_toTopOf="@id/g_et_input_new_password_again_t" />
 </androidx.constraintlayout.widget.ConstraintLayout>
