--- a/presentation/src/main/res/layout/activity_new_password_input_page.xml
+++ b/presentation/src/main/res/layout/activity_new_password_input_page.xml
@@ -3,6 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_ibtn_back_button_t"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.075" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_ibtn_back_button_b"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.102" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_ibtn_back_button_s"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.017" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g_ibtn_back_button_e"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.043" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_tv_input_new_password_t"
@@ -159,4 +187,29 @@
         app:layout_constraintEnd_toEndOf="@id/g_et_input_new_password_e"
         app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
         app:layout_constraintTop_toTopOf="@id/g_et_input_new_password_again_t" />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/btn_login"
+        android:text="@string/check"
+        android:textColor="@color/white"
+        android:fontFamily="@font/pretendard_semibold"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@id/g_tv_input_new_password_s"
+        app:layout_constraintEnd_toEndOf="@id/et_input_new_password"
+        app:layout_constraintTop_toTopOf="@id/g_btn_check_t"
+        app:layout_constraintBottom_toBottomOf="@id/g_btn_check_b"
+        />
+
+    <ImageButton
+        android:id="@+id/ibtn_back_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/ibtn_back_button"
+        app:layout_constraintStart_toStartOf="@id/g_ibtn_back_button_s"
+        app:layout_constraintTop_toTopOf="@id/g_ibtn_back_button_t"
+        app:layout_constraintEnd_toEndOf="@id/g_ibtn_back_button_e"
+        app:layout_constraintBottom_toBottomOf="@id/g_ibtn_back_button_b"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
